[package]
name = "static_http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
strip = true
opt-level = 's' # Optimize for size
lto = true
codegen-units = 1

[dependencies]
include_dir = "0.7.3"   
hyper = { version = "0.14", features = ["server", "http1", "runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
debug_print = "1.0.0"
flate2 = "1"
cached = "0.40.0"
